--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1 {
 
 @font-face {
   font-family: 'Nexum';
-  src: url('fonts/Nexum.otf') format('opentype');
+  src: url('fonts/NexumDisplay-Bold.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
